# SWE-AF

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  agentfield-package.yaml  config.py  discussion_tool.py  docker-compose.go.yml  docker-compose.local.yml  docker-compose.yml  main.py  opencode.json  pyproject.toml  requirements-docker.txt  requirements.txt  schemas.py
agent_ai/: README.md  client.py  factory.py
claude_ai/: __init__.py  client.py  types.py
discussion/: __init__.py  prompts.py  prototype.py
docker/: opencode.json
docs/: DAGGER.md  SKILL.md  deployment.md  railway-template.md
execution/: __init__.py  _replanner_compat.py  coding_loop.py  dag_executor.py  dag_utils.py  schemas.py
go/: Dockerfile  Makefile  README.md  agentfield-package.yaml  doc.go  go.mod  go.sum
prompts/: __init__.py  architect.py  code_reviewer.py  coder.py  git_init.py  github_pr.py  integration_tester.py  issue_writer.py  merger.py  product_manager.py  qa.py  qa_synthesizer.py  replanner.py  retry_advisor.py  sprint_planner.py  tech_lead.py  verifier.py  workspace.py
reasoners/: execution_agents.py  pipeline.py  schemas.py
scripts/: run_benchmark_suite.py  verify_fast_path_logging.py
swe_af/: __main__.py  app.py  approval.py
tests/: test_agent_ai_provider.py  test_baseline_instrumentation_coding.py  test_benchmark_suite.py  test_build_isolation.py  test_callsite_updates.py  test_ci_gate.py  test_codex_adapter.py  test_codex_harness_patch.py  test_coding_loop_regressions.py  test_dockerfile.py  test_empty_build_guard.py  (+20 more)
(+235 files in other folders)
